--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,19 @@
-<header class="header">Top header to reader</header>
+<header class="header">
+	<div class="header__left">
+		<nav class="nav">
+			<ul>
+				<li><a href="#">Главная</a></li>
+			</ul>
+		</nav>
+	</div>
+	<div class="header__right">
+		<nav class="nav">
+			<ul>
+				<li><a href="#">Профиль</a></li>
+			</ul>
+		</nav>
+		<form action="/" method="post">
+			<input type="text">
+		</form>
+	</div>
+</header>
