--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -1,7 +1,17 @@
 .header {
 	width: calc(100% - #{$sidebar-widh});
+	color: $white;
+	box-shadow: 0 5px 22px reba(0, 0, 0, .25);
+	background-color: #0D0D0D;
 	position: fixed;
 	top: 0;
 	right: 0;
 	z-index: $z-index-header;
+	display: flex;
+}
+.header__left {
+	width: 60%;
+}
+.header__right {
+	width: 40%;
 }
