--- a/src/assets/scss/blocks/sidebar.scss
+++ b/src/assets/scss/blocks/sidebar.scss
@@ -1,9 +1,29 @@
 .sidebar {
 	width: $sidebar-widh;
 	height: 100vh;
-	background-color: darken($primary, 2);
+	background-color: darken($primary, 5);
+	box-shadow: 5px 0 15px rgba($primary, .8);
 	position: fixed;
 	left: 0;
 	top: 0;
 	z-index: $z-index-sidebar;
+}
+.sidebar__header {
+	height: 180px;
+	background-color: $primary;
+	img {
+		display: block;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
+.sidebar__content {
+	padding: 0 2rem;
+	margin-top: -5rem; 
+}
+.sidebar__footer {
+	padding: 0 2rem;
+	display: flex;
+	justify-content: space-between;
 }
