--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -1,6 +1,8 @@
 $primary: #D2D2D2;
 $secondary: #202020;
 $white: #ffffff;
+$red: #ED3024;
+$blue: #3137C9;
 $z-index-sidebar: 1000;
 $z-index-header: 1000;
 $sidebar-widh: 300px;
