--- a/src/partials/assaide.html
+++ b/src/partials/assaide.html
@@ -1,3 +1,40 @@
 <aside class="sidebar">
-	Sidebar
+	<div class="sidebar__header">
+		<img src="assets/images/rectangle1.jpg" alt="altab">
+	</div>
+	<div class="sidebar__content">
+		<div class="profile">
+			<img class="profile__avatar" src="https://scontent.fhrk2-1.fna.fbcdn.net/v/t1.0-1/c28.17.170.170a/p200x200/36788066_1911585428901549_6682681543040696320_o.jpg?_nc_cat=111&ccb=2&_nc_sid=7206a8&_nc_ohc=Mm3tbH0buf4AX9RmFOa&_nc_ht=scontent.fhrk2-1.fna&tp=27&oh=196c9b958ad1145e6c1dae53f0e68c27&oe=5FEBC717" alt="">
+			<div class="profile__name">Artem</div>
+			<div class="profile__prof">Front-end develop</div>
+			<ul class="social">
+				<li class="social__item">
+						<a href="" class="social__link" target="_blank">
+							<img src="assets/images/instagram.svg" alt="">
+						</a>
+				</li>
+				<li class="social__item">
+						<a href="" class="social__link" target="_blank">
+							<img src="assets/images/vk.svg" alt="">
+						</a>
+				</li>
+				<li class="social__item">
+						<a href="" class="social__link" target="_blank">
+							<img src="assets/images/pinterest.svg" alt="">
+						</a>
+				</li>
+			</ul>
+		</div>
+		<div class="profile__text">
+			<p>Front-end разработчик. Практик верстки сайтов.
+				Созданием сайтов занимаюсь с 2012 года. 
+				Работал в нескольких ИТ компаниях и 
+				наработал более 10 000 часов в создании 
+				сайтов различной сложности.</p>
+		</div>
+	</div>
+	<div class="sidebar__footer">
+		<a class="btn btn--red" href="/">Мои работы</a>
+		<button class="btn btn--blue" type="button">Написать мне</button>
+	</div>
 </aside>
