--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -21,6 +21,16 @@ body {
 @import 'blocks/header';
 /* sidebar */
 @import 'blocks/sidebar';
+/* nav */
+@import 'blocks/nav';
+/* search */
+@import 'blocks/search';
+
+@import 'blocks/subnav';
+
+@import 'blocks/stories';
+
+@import 'blocks/add-post';
 /* btn */
 @import 'blocks/btn';
 /* social */
