--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -1,8 +1,9 @@
-$primary: #D2D2D2;
-$secondary: #202020;
+$primary: #f3f3f3;
+$secondary: #525252;
 $white: #ffffff;
 $red: #ED3024;
 $blue: #3137C9;
+$black: #000000;
 $z-index-sidebar: 1000;
 $z-index-header: 1000;
 $sidebar-widh: 300px;
